@startuml
skinparam shadowing false
skinparam line type polyline

'left to right direction

class VehicleCheckup {
    - plateNumber : String
    - date : Date
    - kmAtCheckup : int
}


class MaintenanceRepository {
    + registerVehicleCheckup(plateNumber : String, date : Date, kmAtCheckup : int)
}

class Repositories {
-maintenanceRepository : MaintenanceRepository
        - instance : Repositories
        - Repositories()
    + getInstance() : Repositories
    + getMaintenanceRepository()
}

class RegisterMaintenanceController {
    + RegisterMaintenanceController()
    + getMaintenanceRepository()
}

class RegisterMaintenanceUI {
}

Repositories -> Repositories : instance

RegisterMaintenanceUI .> RegisterMaintenanceController

RegisterMaintenanceController .> Repositories

RegisterMaintenanceController ..> MaintenanceRepository

Repositories -> "1" MaintenanceRepository

MaintenanceRepository "1" -> "*" VehicleCheckup


RegisterMaintenanceController ..> VehicleCheckup


@enduml
